third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul_assign/all_fields_skipped.rs
#[derive(derive_more::MulAssign)]
struct Foo(#[mul_assign(skip)] i32);

#[derive(derive_more::MulAssign)]
#[mul_assign(forward)]
struct Bar(#[mul_assign(skip)] i32);

fn main() {}
